# llm_optimization_team_hackathon

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  auto_tune.py  generate_final_report.py  mcp_server.py  probe.py  pyproject.toml  server_client.py  setup.md  setup.sh  verify.sh
benchmark/: __init__.py  benchmark.py  compare_quantizations.py  compare_speculative.py
charts/: __init__.py  generate_charts.py
dashboard/: _js1.py  _js2.py  _js3.py  _js4.py  _js5.py  _js6.py  _writer.py  _writer2.py  app.py  index.html
docs/: Arm_AI_Optimization_P2_Final_Documentation.md  PERSON3_COMPLETED_WORK.md  SETUP.md  TROUBLESHOOTING.md
evaluation/: __init__.py  evaluate.py  metrics.py  prompts.json
reports/: evaluation_report.md  evaluation_summary.csv  evaluation_summary.json
results/: benchmark_results_20260720T095531Z.csv  benchmark_results_20260720T095531Z.json  benchmark_results_20260720T095555Z.csv  benchmark_results_20260720T095555Z.json  benchmark_results_20260720T100233Z.csv  benchmark_results_20260720T100233Z.json  benchmark_results_20260720T100758Z.csv  benchmark_results_20260720T100758Z.json  benchmark_results_20260720T100803Z.csv  benchmark_results_20260720T100803Z.json  benchmark_results_20260720T100826Z.csv  benchmark_results_20260720T100826Z.json  benchmark_results_20260720T101914Z.json  benchmark_results_20260720T102316Z.json  benchmark_results_20260720T102647Z.json  benchmark_results_20260720T103207Z.csv  benchmark_results_20260720T103207Z.json  benchmark_results_20260722T100944Z.csv  benchmark_results_20260722T100944Z.json  (+5 more)
(+7 files in other folders)
